Lyrics fix - fixed lyrics still being clickable when hidden - scroll set to auto instead of always visible

--- a/src/website/css/sequencer_ui.css
+++ b/src/website/css/sequencer_ui.css
@@ -68,7 +68,8 @@
     background-color: rgba(3, 3, 3, 0.3);
     transition: opacity 100ms ease-in-out;
     scroll-behavior: smooth;
-    overflow: scroll;
+    overflow-y: auto;
+    visibility: hidden;
     border-radius: 10px;
 }
 
@@ -91,4 +92,5 @@
 
 .lyrics_show{
     opacity: 1 !important;
+    visibility: visible !important;
 }
